react-router: fixed layout issues with cocktaillist bootstrap components

--- a/src/styles/layout/_cocktaildetails.scss
+++ b/src/styles/layout/_cocktaildetails.scss
@@ -1,13 +1,10 @@
 .cocktail-details {
-  min-height: calc(100vh - 230px);
-  display: flex;
-  flex-direction: row;
-  margin-top: 230px;
+  @include site-wrapper;
 
   &_image {
     &-image {
       img {
-        height: 300px;
+        height: 400px;
         border-radius: 6px;
       }
     }
